# github-profile-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-profile.yml
src/: __init__.py  analysis.py  config.py  data_exporter.py  gemini_generator.py  github_analyzer.py  main.py  models.py  utils.py
